--- a/index.html
+++ b/index.html
@@ -164,8 +164,79 @@
                 </button>
             </div>
         </div>
-
     </main>
+    <footer class="center">
+        <div class="footer_top center">
+            <div class="footer_top_elem">
+                <img src="./img_footer/Forma 1.png" alt="top_left">
+                <h1 class="footer_top_h1_left">Free Delivery</h1>
+                <p class="footer_top_p">Worldwide delivery on all. Authorit tively morph <br> next-generation innov
+                    tion with extensive models</p>
+            </div>
+            <div class="footer_top_elem">
+                <img src="./img_footer/Forma 2.png" alt="top_center">
+                <h1 class="footer_top_h1_center">Sales & discounts</h1>
+                <p class="footer_top_p">Worldwide delivery on all. Authorit tively morph <br> next-generation innov tion
+                    with extensive models.</p>
+            </div>
+            <div class="footer_top_elem">
+                <img src="./img_footer/Forma 3.png" alt="top_right">
+                <h1 class="footer_top_h1_right">Quality assurance</h1>
+                <p class="footer_top_p">Worldwide delivery on all. Authorit tively morph <br> next-generation innov tion
+                    with extensive models.</p>
+            </div>
+        </div>
+        <div class="footer_center center">
+            <div class="footer_center_1">
+                <picture>
+                    <source class="footer_center_img" media="(max-width:400px)" srcset="./img_footer/Layer_mobile.png">
+                    <source class="footer_center_img" media="(max-width:768px)" srcset="./img_footer/Layer 768.png">
+                    <img class="footer_center_img" src="./img_footer/Beach.png" alt="beach">
+                </picture>
+            </div>
+            <div class="footer_center_text">
+                <div class="footer_center_left">
+                    <img class="footer_center_left_img" src="./img_footer/Left_b.png" alt="Left_b">
+                    <p class="footer_center_left_p">“Vestibulum quis porttitor dui! Quisque <br> viverra nunc mi, a
+                        pulvinar purus <br> condimentum“</p>
+                </div>
+                <div class="footer_center_right">
+                    <h1 class="footer_center_right_h1">SUBSCRIBE</h1>
+                    <h2 class="footer_center_right_h2">FOR OUR NEWLETTER AND PROMOTION</h2>
+                    <div class="footer_center_inp_but">
+                        <div class="footer_center_inp_div">
+                            <input class="footer_center_input" type="email" value="Enter Your Email">
+                        </div>
+                        <div class="footer_center_button_div">
+                            <input class="footer_center_button" type="button" value="Subscribe">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer_bottom center">
+            <div class="footer_bottom_left">
+                <p class="footer_bottom_left_p">© 2022 Brand All Rights Reserved.</p>
+            </div>
+            <div class="footer_bottom_right">
+                <div class="footer_bottom_img">
+                    <div class="footer_bottom_img_border">
+                        <img src="./img_footer/facebook-f-brands (3) 1.png" alt="facebook">
+                    </div>
+                    <div class="footer_bottom_img_border">
+                        <img src="./img_footer/instagram-brands 1.png" alt="instagram">
+                    </div>
+                    <div class="footer_bottom_img_border">
+                        <img src="./img_footer/pinterest-p-brands 1.png" alt="pinterest">
+                    </div>
+                    <div class="footer_bottom_img_border">
+                        <img src="./img_footer/twitter-brands 1.png" alt="twitter">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
