--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Интернет магазин</title>
+    <title>Интернет магази222222222н</title>
     <link rel="stylesheet" href="./Style/Style.css">
 </head>
 
@@ -21,7 +21,32 @@
             </li>
         </ul>
     </header>
-
+body>
+    <header class="header center">
+        <ul class="ul center">
+            <li class="li1"><img src="./img/Group 2.png" alt="logo1"></li>
+            <li class="li2"><img src="./img/Forma 1.png" alt="logo2"></li>
+            <li class="li3">
+                <picture>
+                    <source media="(max-width:400px)" srcset="./img_Iphone/Button_phone.png">
+                    <img src="./img/Button copy.png" alt="logo3">
+                </picture>
+            </li>
+        </ul>
+    </header>
+    body>
+    <header class="header center">
+        <ul class="ul center">
+            <li class="li1"><img src="./img/Group 2.png" alt="logo1"></li>
+            <li class="li2"><img src="./img/Forma 1.png" alt="logo2"></li>
+            <li class="li3">
+                <picture>
+                    <source media="(max-width:400px)" srcset="./img_Iphone/Button_phone.png">
+                    <img src="./img/Button copy.png" alt="logo3">
+                </picture>
+            </li>
+        </ul>
+    </header>
     <div class="header_top_img center">
         <div class="header_img_container center">
             <div class="header_div_left">
