Связь с удаленным репозиторием

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!DOCTYPE html>
+<html lang="en">
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,7 +26,7 @@
             </li>
         </ul>
     </header>
-body>
+    body>
     <header class="header center">
         <ul class="ul center">
             <li class="li1"><img src="./img/Group 2.png" alt="logo1"></li>
